package main.java.printing;

public interface Printer {
	void print(String receiptText);
}
