@startuml Week8_Adapter_Pattern

skinparam classAttributeIconSize 0

package "Adapter Pattern" {
    class Client <<demo>> {
        +main(String[])
    }
    
    class ReceiptPrinter <<target>> {
        +format(...) : String
        +print(String receipt)
    }
    
    interface Printer <<target interface>> {
        +print(String receiptText)
    }
    
    class LegacyPrinterAdapter <<adapter>> {
        -LegacyThermalPrinter legacyPrinter
        +print(String receiptText)
    }
    
    class LegacyThermalPrinter <<adaptee>> {
        +legacyPrint(byte[] payload)
    }
    
    Client --> ReceiptPrinter : uses
    Client --> Printer : uses
    Client --> LegacyPrinterAdapter : uses
    Client --> LegacyThermalPrinter : uses
    
    ReceiptPrinter ..> Printer : could implement
    Printer <|.. LegacyPrinterAdapter : implements
    
    LegacyPrinterAdapter --> LegacyThermalPrinter : adapts\n(String → byte[])
    
    note right of LegacyPrinterAdapter
        <b>Adapter</b>
        - Implements Printer interface
        - Converts String to byte[]
        - Delegates to LegacyThermalPrinter
        - Keeps domain code unchanged
    end note
    
    note right of LegacyThermalPrinter
        <b>Adaptee (Vendor Code)</b>
        - Legacy vendor printer
        - Only accepts byte[]
        - Cannot be modified
        - Clearly "not ours"
    end note
    
    note right of Printer
        <b>Target Interface</b>
        - Expected interface
        - Works with String
        - Domain code uses this
    end note
}

@enduml


